# pacflypy

./: .gitignore  .readthedocs.yaml  INSTALL.md  Makefile  README.md  README.rst  docs  pyproject.toml  setup.py
.artefacts/: python-pacflypy_0.2.1_all_termux.deb  python3-pacflypy_0.2.1_all_debian.deb
.github/workflows/: build.yml
conda-recipe/: meta.yml
docs/: command.md  conf.py  index.rst
docs/doctrees/: einleitung.doctree  installieren.doctree  klassen.doctree  mehr.doctree
docs/html/: einleitung.html  index.html  objects.inv  searchindex.js
docs/source/: conf.py  index.rst
docs/usage/: installation.rst
src/pacflypy/: __init__.py  pacflypy.py
src/pacflypy.egg-info/: PKG-INFO  SOURCES.txt
src/pacflypy/command/: __init__.py  command.py
src/pacflypy/control/: control.py
src/pacflypy/flypy/: flypy.py
src/pacflypy/flypy/lexer/: lexer.py
src/pacflypy/flytar/: __init__.py  flytar.py
src/pacflypy/freetime/: __init__.py
src/pacflypy/freetime/manipulate/: __init__.py  manipulate.py
src/pacflypy/process/: __init__.py  process.py
src/pacflypy/style/: style.py
src/pacflypy/system/: __init__.py  system.py
src/pacflypy/tarfile/: __init__.py  tarfile.py
usr/local/lib/python3.12/dist-packages/pacflypy-0.1.5.dist-info/: METADATA  RECORD
usr/local/lib/python3.12/dist-packages/pacflypy/command/: command.py
usr/local/lib/python3.12/dist-packages/pacflypy/control/: control.py
usr/local/lib/python3.12/dist-packages/pacflypy/exceptions/: exception.py
