[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacflypy"
version = "0.2.8"
description = "PacflyPy is a Special Python Module"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "PacflyPy", email = "pacflypy@pacflypy.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
urls = { "Homepage" = "https://github.com/PacflyPy/PacflyPy" }

[tool.setuptools]
packages.find = { where = ["src"] }
